--- a/recipes/shiro.html
+++ b/recipes/shiro.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Shiro</h1>
+    <img src="http://artpictures.club/view.php?img=https://ethiopiangobgnu.com/siteAdmin/Blog%20images/Visit%20Ethiopia-640d9c272c4bf9.61475902.jpg" width="1000" height="1000" alt="Shiro wat picture">
   </body>
 </html>
