unordered list of ingridiants and ordered list of steps with their crosponding header added on shiro.html file

--- a/recipes/shiro.html
+++ b/recipes/shiro.html
@@ -5,7 +5,31 @@
     <title>My shiro recipe page</title>
   </head>
   <body>
-    <h1>Shiro</h1>
+    <h1>Shiro wet.</h1>
     <img src="http://artpictures.club/view.php?img=https://ethiopiangobgnu.com/siteAdmin/Blog%20images/Visit%20Ethiopia-640d9c272c4bf9.61475902.jpg" width="1000" height="1000" alt="Shiro wat picture">
+    <h2>How to prepare shiro, a traditional Ethiopian food.</h2>
+    <p>Ethiopian Shiro, a flavorful and hearty stew, is a staple in Ethiopian cuisine. To prepare this dish, you'll need a few key ingredients and some time to let the flavors meld. Begin by finely chopping onions and garlic and sautéing them in a pan with a bit of oil until they become translucent. Then, add berbere spice (a blend of chili, paprika, and various aromatic spices), along with some tomato paste, and cook until the mixture is fragrant.</p>
+
+    <p>Next, add the star ingredient: powdered chickpeas or lentils. These provide the thickening base for the stew. Gradually stir in water to create a smooth, thick consistency, much like a porridge. Season with salt and simmer, allowing the Shiro to thicken and the flavors to meld. It's common to serve Ethiopian Shiro with injera, a spongy sourdough flatbread, which you can use to scoop up the stew. Shiro is a comforting and nutritious dish that's not only popular in Ethiopia but also enjoyed by food enthusiasts worldwide.</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>Finely chopped onions</li>      <li>Minced garlic</li>
+      <li>Cooking oil</li>
+      <li>Berbere spice (a blend of chili, paprika, and various spices)</li>
+      <li>Tomato paste</li>
+      <li>Ground lentils or chickpeas</li>
+      <li>Water</li>
+      <li>Salt</li>
+    </ul>
+    <ol>
+      <li>Sauté Onions and Garlic</li>
+      <li>Add Berbere Spice</li>
+      <li>Incorporate Tomato Paste</li>
+      <li>Introduce Ground Lentils or Chickpeas</li>
+      <li>Adjust the Consistency</li>
+      <li>Season with Salt</li>
+      <li>Simmer and Thicken</li>
+      <li>Serve with Injera</li>
+    </ol>
   </body>
 </html>
