--- a/recipes/shiro.html
+++ b/recipes/shiro.html
@@ -21,6 +21,7 @@
       <li>Water</li>
       <li>Salt</li>
     </ul>
+    <h3>Steps</h3>
     <ol>
       <li>Sauté Onions and Garlic</li>
       <li>Add Berbere Spice</li>
