picture added to the project repo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img src="ethiopian_food.jpg">
     <a href="./recipes/shiro.html" target="_blank">Shiro</a>
   </body>
 </html>
