An img element is added on index and shiro html files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <img src="ethiopian_food.jpg">
+    <img src="ethiopian_food.jpg" alt="Ethiopian food picture" width="100%">
     <a href="./recipes/shiro.html" target="_blank">Shiro</a>
   </body>
 </html>
