--- a/recipes/shiro.html
+++ b/recipes/shiro.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Shiro wet.</h1>
-    <img src="http://artpictures.club/view.php?img=https://ethiopiangobgnu.com/siteAdmin/Blog%20images/Visit%20Ethiopia-640d9c272c4bf9.61475902.jpg" width="1000" height="1000" alt="Shiro wat picture">
+    <img src="shiro.jpg" alt="Ethiopian food shiro pictute" width="100%">
     <h2>How to prepare shiro, a traditional Ethiopian food.</h2>
     <p>Ethiopian Shiro, a flavorful and hearty stew, is a staple in Ethiopian cuisine. To prepare this dish, you'll need a few key ingredients and some time to let the flavors meld. Begin by finely chopping onions and garlic and sautéing them in a pan with a bit of oil until they become translucent. Then, add berbere spice (a blend of chili, paprika, and various aromatic spices), along with some tomato paste, and cook until the mixture is fragrant.</p>
 
