--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <img src="ethiopian_food.jpg" alt="Ethiopian food picture" width="100%">
-    <a href="./recipes/shiro.html" target="_blank">Shiro</a>
+    <h2>Ehiopian food recipes</h2>
+    <ul>
+      <li>Ethiopian <a href="./recipes/shiro.html" target="_blank">Shiro</a></li>
+    </ul>
   </body>
 </html>
