A new list of recipe added to index html file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <body>
     <h1>Odin Recipes</h1>
     <img src="ethiopian_food.jpg" alt="Ethiopian food picture" width="100%">
-    <h2>Ehiopian food recipes</h2>
+    <h2>Ehiopian food recipe collection</h2>
     <ul>
       <li>Ethiopian <a href="./recipes/shiro.html" target="_blank">Shiro</a></li>
+      <li>Ethiopian <a href="./recipes/doro.html" target="_blank">Doro</a></li>
+      <li>Ethiopian <a href="./recipes/kitfo.html" target="_blank">Kitfo</a></li>
     </ul>
   </body>
 </html>
