A type fixed on kitfo.html file

--- a/recipes/kitfo.html
+++ b/recipes/kitfo.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Kitfo</h1>
-    <img src="kifo.jpg" alt="Ethiopian food kitfo pictute" width="100%">
+    <img src="kitfo.jpg" alt="Ethiopian food kitfo pictute" width="100%">
     <h2>How to prepare kitfo, a traditional Ethiopian food.</h2>
     <p>Kitfo, a unique Ethiopian dish, is crafted by finely mincing fresh, lean beef. In a bowl, season the meat with nigella seeds, cardamom, and spicy mitmita blend, adjusting the spice to your preference. A drizzle of clarified butter binds the flavors together.</p>
     <p>Traditionally served with injera, Kitfo offers a distinct culinary adventure, highlighting the bold and vibrant taste of Ethiopian cuisine. Enjoy the harmonious blend of spices and the exquisite, raw beef, making Kitfo a memorable dish that stands out in the world of culinary exploration.</p>
